--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "burger",
   "version": "1.0.0",
-  "description": "",
+  "description": "Add a burger and devour it!",
   "main": "server.js",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
+    "method-override": "^3.0.0",
+    "mysql": "^2.17.1"
+  },
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -17,11 +23,5 @@
     "url": "https://github.com/mfail792/burger/issues"
   },
   "homepage": "https://github.com/mfail792/burger#readme",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "express-handlebars": "^3.1.0",
-    "method-override": "^3.0.0",
-    "mysql": "^2.17.1"
-  }
+  "devDependencies": {}
 }
